# lpc10-gst-plugin

./: .gitignore  CMakeLists.txt  README.md  test.sh  test2.sh  test_mic.sh  test_two_step.sh
lpc10/: CMakeLists.txt  analys.c  bsynz.c  chanwr.c  dcbias.c  decode.c  deemp.c  difmag.c  dyptrk.c  encode.c  energy.c  f2c.h  f2clib.c  ham84.c  hp100.c  invert.c  irc2pc.c  ivfilt.c  lpc10.h  lpcdec.c  lpcenc.c  lpcini.c  lpfilt.c  median.c  mload.c  onset.c  pitsyn.c  placea.c  placev.c  preemp.c  prepro.c  random.c  rcchk.c  synths.c  tbdm.c  voicin.c  vparms.c
src/: gstlpc10.c  gstlpc10_macros.h  gstlpc10_util.c  gstlpc10_util.h  gstlpc10dec.c  gstlpc10dec.h  gstlpc10enc.c  gstlpc10enc.h  version.h.in
